--- a/2.css
+++ b/2.css
@@ -8,7 +8,6 @@ body {
   padding: 4px;
   padding-left: 8px;
   margin-bottom: 4px;
-
   font-size: large;
 }
 
@@ -16,4 +15,6 @@ body {
   height: 32px;
   width: 90%;
   padding: 4px;
+  color: blue;
+  background-color: red;
 }
